JDK 20 and URL fix